Added css to the project for the form

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,22 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="title">
+  <h1>Create A New User</h1>
+</div>
+<div class="outer-container">
+  <div class="form-container">
+    <form action="/users/new" method="post">
+      <label for="username">Username</label><br>
+      <input id="username" name="username" type="text"><br><br>
+
+      <label for="email">Email</label><br>
+      <input id="email" name="email" type="text"><br><br>
+
+      <label for="password">Password</label><br>
+      <input id="password" name="password" type="password"><br><br>
+
+      <label for="password_confirmation">Confirm Password</label><br>
+      <input id="password_confirmation" name="password_confirmation" type="password"><br><br>
+    
+      <button type="submit">Submit</button>
+    </form>
+  </div>
+</div>
