--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,8 @@
-<!--
 <div class="title">
   <h1>Create A New User</h1>
 </div>
+
+<!--
 <div class="outer-container">
   <div class="form-container">
     <form action="/users" method="post" accept-charset="UTF-8">
@@ -42,19 +43,22 @@
   <%= submit_tag 'Submits' %>
 <% end -%>
 -->
+<div class="outer-container">
+  <div class="form-container">
+    <%= form_for(@user) do |f| %>
+      <%= f.label :username %><br>
+      <%= f.text_field :username %><br><br>
 
-<%= form_for(@user) do |f| %>
-  <%= f.label :username %><br>
-  <%= f.text_field :username %><br><br>
+      <%= f.label :email %><br>
+      <%= f.text_field :email %><br><br>
 
-  <%= f.label :email %><br>
-  <%= f.text_field :email %><br><br>
+      <%= f.label :password %><br>
+      <%= f.password_field :password %><br><br>
 
-  <%= f.label :password %><br>
-  <%= f.password_field :password %><br><br>
+      <%= f.label :password_confirmation %><br>
+      <%= f.password_field :password_confirmation %><br><br>
 
-  <%= f.label :password_confirmation %><br>
-  <%= f.password_field :password_confirmation %><br><br>
-
-  <%= f.submit 'Create' %>
-<% end %>
+      <%= f.submit 'Create' %>
+    <% end %>
+  </div>
+</div>
